--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,42 @@
     }
   }
 }
+
+/* @layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+  }
+} */
+ @layer utilities{
+ .custom-scrollbar::-webkit-scrollbar {
+    width: 10px;  
+    height: 10px; 
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent; 
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #cbd5e1; 
+    border-radius: 20px;      
+    cursor: pointer;
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #94a3b8; 
+  }
+
+  .custom-scrollbar {
+    scrollbar-width: thin;       
+    scrollbar-color: #cbd5e1 transparent; 
+  }
+ }
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
